Fix inconsistent repeatable field spacing

--- a/src/components/title/_fields/identifiers/identifiers-fields.css
+++ b/src/components/title/_fields/identifiers/identifiers-fields.css
@@ -6,7 +6,7 @@
   padding: 0;
 
   & legend {
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
   }
 }
 
